--- a/glob/styles.css
+++ b/glob/styles.css
@@ -32,7 +32,7 @@ input#rshb-shoot-button {
 }
 
 
-div#rshb-winner-block {
+div#rshb-status-block {
   padding:1em;
 }
 
@@ -65,6 +65,12 @@ div.rshb-radio-row input{
 div#rshb-header {
   padding:1em;
   background-color:yellow;
-  border-radius:2px;
+  margin-bottom:.5em;
+  border-radius:5px;
+}
+
+img.dev-avatar {
+  margin:auto;
+  width:10%;
 }
 
